# mechanic

./: .gitignore  LICENSE  README.md  pyproject.toml
mechanic/: __init__.py  baseline.py  cli.py  config.py  sampler.py  server.py  store.py
mechanic/plugins/: __init__.py  base.py  docker_sensor.py  ollama_sensor.py  os_sensor.py
scripts/: install.sh  uninstall.sh
tests/: conftest.py  test_baseline.py  test_cli.py  test_config.py  test_plugins.py  test_sampler.py  test_server.py  test_store.py
