[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechanic"
version = "0.1.0"
description = "Local-first baseline & anomaly daemon that gives AI assistants memory of your machine, over MCP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christopher Bradford" }]
keywords = ["mcp", "monitoring", "sysadmin", "baseline", "anomaly", "local-first"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "mcp>=1.2.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
]

[project.scripts]
mechanic = "mechanic.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mechanic*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
